[project]
name = "densho-wagtail-notes"
description = "Add footnotes to rich text in your Wagtail pages"
authors = [
    {name = "Geoffrey Jost", email = "geoffrey.jost@densho.us"}
]
maintainers = [
    {name = "Geoffrey Jost", email="geoffrey.jost@densho.us"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wagtail", "Django", "footnotes", "rich text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
]

dynamic = ["version"]  # will read __version__ from wagtail_notes/__init__.py
requires-python = ">=3.11"
dependencies = [
    "Wagtail>=6.0",
    "Django>=5.0",
    "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
testing = []

[project.urls]
Repository = "https://github.com/denshoproject/densho-wagtail-notes"

[build-system]
requires = []
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wagtail_notes"

[tool.flit.sdist]
exclude = [
    "tests",
    "Makefile",
    "docs",
    ".*",
    "*.json",
    "*.ini",
    "*.yml",
    "CHANGELOG.md",
    "ruff.toml",
    "testmanage.py",
]
